--- a/assets/css/article.scss
+++ b/assets/css/article.scss
@@ -1,5 +1,5 @@
 article {
-    h1, h2, h3, h4, h5, h6, p, blockquote {
+    h1, h2, h3, p, blockquote {
         max-width: 600px;
     }
     h2 {
@@ -23,7 +23,7 @@ article {
     	text-align: center;
     	font-style: italic;
     }
-    img, object {
+    img {
     	display: block;
     	padding: 0;
     	width: 100%;
@@ -39,13 +39,7 @@ article {
         margin-left: 0;
         margin-top: 0;
         margin-bottom: 0;
-        border-left: 10px solid #000;
-        code ol {
-            margin-left: 28px;
-        }
-        h1, h2, h3, h4 {
-            margin-top: 15px;
-        }
+        border-left: 10px solid #356AA0;
         p {
             padding-right: 0;
             margin-right: 0;
@@ -106,12 +100,6 @@ article {
         blockquote {
             p {
                 max-width: 500px;
-            }
-            blockquote p {
-                max-width: 400px;
-            }
-            blockquote blockquote p {
-                max-width: 380px;
             }
         }
     }
