--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,13 +61,9 @@ figure {
 p {
 	font-size: 15px;
 	line-height: 23px;
-	margin-top: 20px;
-	margin-bottom: 20px;
+  margin: 20px 0 20px 0;
 	color: #4d4d4d;
 	text-align: justify;
-    img {
-        margin: 0;
-    }
 }
 
 em {
