--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,13 @@ layout: compress
   </head>
   <body class="home blog">
     <header id="sidebar">
-      <figure class="logo medium">
-      <a href="/">
-        <picture>
-          <source srcset="/assets/images/developer-koala.webp" type="image/webp">
-          <img src="/assets/images/developer-koala.jpg" alt="developer koala" />
-        </picture>
-      </a>
+      <figure id="logo">
+        <a href="/">
+          <picture>
+            <source srcset="/assets/images/developer-koala.webp" type="image/webp">
+            <img src="/assets/images/developer-koala.jpg" alt="developer koala" />
+          </picture>
+        </a>
       </figure>
       <h1><a href="/">{{site.author.name}}</a></h1>
       <label for='open_menu' id='mobile_menu'>{% include images/bars.svg %}</label>
