--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -1,10 +1,6 @@
 nav.pagination {
-	padding: 40px;
+	padding: 40px 40px 60px 40px;
 	border-top: 1px solid #e2e2e2;
-	padding-bottom: 60px;
-    span {
-        display: none;
-    }
     span.next {
     	display: block;
     	float: right;
