--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -1,4 +1,42 @@
-header#sidebar {
+@import "constants";
+
+#logo {
+	top: 10px;
+	left: 10px;
+	width: 170px;
+	height: 170px;
+	padding: 0px 30px 0px 30px;
+	img {
+	    margin-top: 25px;
+	    max-width: 200px;
+	    width: 100%;
+	}
+	@media(min-width: $responsive_start) and (max-width:900px) {
+		width: 95px;
+		height: 95px;
+		a {
+			border-width: 5px;
+			top: 8px;
+			left: 8px
+		}
+	}
+	@media(max-width: $responsive_start) {
+		width: 30px;
+		height: 30px;
+		float: left;
+		padding: 0 0 0 15px;
+		margin: 0 auto;
+		position: relative;
+		left: auto;
+		right: auto;
+		top: 0;
+		img {
+			margin-top: 0px;
+		}
+	}
+}
+
+#sidebar {
 	position: fixed;
 	width: 26%;
     z-index: 1;
@@ -15,26 +53,6 @@ header#sidebar {
         font-weight: bold;
         line-height: 30px;
     }
-    figure.logo a {
-        top: 10px;
-        left: 10px;
-        width: 170px;
-        height: 170px;
-    }
-    #mobile_menu {
-        display: none;
-        float: right;
-        margin-right: 15px;
-        top: -2px;
-        position: relative;
-        svg {
-            width: 20px;
-            height: 20px;
-        }
-        @media( max-width: $responsive_start ) {
-            display: block;
-        }
-    }
     @media( max-width: $responsive_start ) {
         display: block;
         position: fixed;
@@ -46,7 +64,7 @@ header#sidebar {
         margin: 0;
         float: none;
         text-align: center;
-        background-color: rgba( 255, 255, 255, 0.93 );
+        background-color: #FFFE;
         overflow: hidden;
         border-bottom: 1px solid #e2e2e2;
         padding-top: 15px;
@@ -71,22 +89,22 @@ header#sidebar {
             font-size: 15px;
             margin-bottom: 15px;
         }
-    	figure {
-            float: left;
-            padding: 0;
-            &.logo {
-                padding-left: 15px;
-                margin: 0 auto;
-                position: relative;
-                left: auto;
-                right: auto;
-            }
-            img {
-                max-width: 30px;
-                margin-top: 0px;
-            }
-        }
     }
+}
+
+#mobile_menu {
+	display: none;
+	float: right;
+	margin-right: 15px;
+	top: -2px;
+	position: relative;
+	svg {
+		width: 20px;
+		height: 20px;
+	}
+	@media( max-width: $responsive_start ) {
+		display: block;
+	}
 }
 
 @media( min-width: $full_screen ) {
@@ -95,22 +113,11 @@ header#sidebar {
     }
 }
 
-header.begin {
-    padding: 0 0 0 40px;
-}
-
 /* Only top and bottom padding for first header */
-section#river > header:first-child {
+#river > header:first-child {
     padding: 40px 0 40px 40px;
 }
 
-header.begin #top_time {
-	display: block;
-	position: relative;
-	text-transform: uppercase;
-	color: #000;
+#top_time {
 	font-weight: 700;
-	font-size: 16px;
-	letter-spacing: 1px;
-	line-height: 23px
 }
