--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -94,34 +94,12 @@ a:link, a:visited, a:hover, a:active {
 
 /* Logo */
 
-header .logo, header h1 {
+header h1 {
   padding: 0px 30px 0px 30px;
-}
-
-figure.logo img {
-    margin-top: 25px;
-    max-width: 200px;
-    width: 100%;
 }
 
 /* Responsive Stuff */
 
-@media( min-width: $responsive_start ) and (max-width:900px) {
-	figure.logo.medium a {
-		border-width: 5px;
-		width: 95px;
-		height: 95px;
-		top: 8px;
-		left: 8px
-	}
-}
-
-header#sidebar figure.logo a {
-	top: 10px;
-	left: 10px;
-	width: 170px;
-	height: 170px;
-}
 section article.post p, section article.post li {
 	font-size: 17px;
 	line-height: 27px;
