Further optimise and prettify CSS

--- a/assets/css/constants.scss
+++ b/assets/css/constants.scss
@@ -2,5 +2,5 @@ $full_screen: 992px;
 $responsive_start: 750px;
 $mobile_start: 500px;
 $lt_grey: #585858;
-$blue: #008AFF;
+$blue: #008aff;
 $body_font: "Helvetica Neue", "Helvetica", sans-serif;
