--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@ layout: compress
     <meta property='og:image' content='{{page.image}}' />
     <style>{% include style.min.css %}</style>
   </head>
-  <body class="home blog">
+  <body>
     <header id="sidebar">
       <figure id="logo">
         <a href="/">
@@ -29,7 +29,7 @@ layout: compress
         </a>
       </figure>
       <h1><a href="/">{{site.author.name}}</a></h1>
-      <label for='open_menu' id='mobile_menu'>{% include images/bars.svg %}</label>
+      <label for='open_menu' id='mobile_menu'>&#9776;</label>
       <input type='checkbox' id='open_menu' class='hidden' />
       <ul id="user_nav">
         <li id="menu">
