--- a/assets/css/article.scss
+++ b/assets/css/article.scss
@@ -1,102 +1,107 @@
 @import "constants";
 
 article {
-    max-width: 600px;
-    h2 {
-        margin-top: 0px;
-        a.no-link {
-            border: none;
-            font-size: 28px
-        }
-        a.anchor {
-            border-bottom: 0;
-            margin-left: 10px
-        }
+  max-width: 600px;
+  h2 {
+    margin-top: 0px;
+    a.anchor {
+      border-bottom: 0;
+      margin-left: 10px;
     }
-    a {
-        text-decoration: none;
+  }
+  img {
+    display: block;
+    padding: 0;
+    width: 100%;
+    float: none;
+  }
+  blockquote {
+    display: inline-block;
+    padding-left: 18px;
+    padding-bottom: 0;
+    font-size: 15px;
+    line-height: 25px;
+    margin: 0;
+    border-left: 10px solid #356aa0;
+    p {
+      padding-right: 0;
+      margin-right: 0;
+      &:first-child {
+        margin-top: 0;
+        padding-top: 0;
+      }
+      &:last-child {
+        margin-bottom: 0;
+        padding-bottom: 0;
+      }
+      a {
         border-bottom: 1px solid #ccc;
-        color: black;
+      }
     }
-    .caption {
-    	font-size: 80% !important;
-    	text-align: center;
-    	font-style: italic;
+  }
+}
+
+.post {
+  display: block;
+  position: relative;
+  padding: 40px;
+  border-top: 1px solid #e2e2e2;
+  min-height: 130px;
+  overflow-x: hidden;
+  ul {
+    max-width: auto;
+    min-width: 0;
+    padding-right: 10px;
+  }
+  h2 a {
+    color: #000;
+    font-size: 25px;
+    line-height: 28px;
+    -webkit-font-smoothing: antialiased;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  ul {
+    list-style-type: disc;
+    max-width: 470px;
+  }
+  ul li,
+  ol li {
+    font-size: 15px;
+    line-height: 25px;
+    color: #4d4d4d;
+    display: list-item;
+    margin: 5px 0 5px 0;
+  }
+  ol {
+    max-width: 470px;
+  }
+  blockquote {
+    p {
+      max-width: 500px;
     }
-    img {
-    	display: block;
-    	padding: 0;
-    	width: 100%;
-    	float: none;
+  }
+
+  @media (max-width: $responsive_start) {
+    padding: 15px;
+    hr {
+      width: 80%;
+      margin: 35px auto 30px;
     }
     blockquote {
-        display: inline-block;
-        padding-left: 18px;
-        padding-bottom: 0;
-        font-size: 15px;
-        line-height: 25px;
-        margin: 0;
-        border-left: 10px solid #356AA0;
-        p {
-            padding-right: 0;
-            margin-right: 0;
-            &:first-child {
-                margin-top: 0;
-                padding-top: 0;
-            }
-            &:last-child {
-                margin-bottom: 0;
-                padding-bottom: 0;
-            }
-        }
+      margin: 0 0px 0 0px;
+      max-width: none;
+      min-width: 0;
+      padding: 0;
     }
-    &.post {
-        display: block;
-        position: relative;
-        padding: 40px;
-        border-top: 1px solid #e2e2e2;
-        min-height: 130px;
-        overflow-x: hidden;
-        ul {
-            max-width: auto;
-            min-width: 0;
-            padding-right: 10px;
-        }
-        h2 a {
-            color: #000;
-            text-decoration: none;
-            border-bottom: 1px solid #CCC;
-            font-weight: 700;
-            font-size: 25px;
-            line-height: 28px;
-            -webkit-font-smoothing: antialiased
-        }
-        h2 {
-            font-size: 20px;
-        }
-        h2.entry-title a {
-            border-bottom: none;
-        }
-        ul {
-            list-style-type: disc;
-            max-width: 470px;
-        }
-        ul li, ol li {
-            font-size: 15px;
-            line-height: 25px;
-            color: #4d4d4d;
-            display: list-item;
-            margin: 5px 0px 5px 0px;
-        }
-        ol {
-            max-width: 470px;
-        }
-        blockquote {
-            p {
-                max-width: 500px;
-            }
-        }
-    }
+  }
+}
+
+.caption {
+  font-size: 80% !important;
+  text-align: center;
+  font-style: italic;
 }
 
 .continue-reading {
@@ -114,8 +119,8 @@ article {
     border-color: $blue;
   }
 
-  @media(max-width: $responsive_start) {
-    margin: 0 auto;
+  @media (max-width: $responsive_start) {
+    margin: 10px auto;
     display: block;
     text-align: center;
   }
