--- a/assets/css/sidebar.scss
+++ b/assets/css/sidebar.scss
@@ -1,54 +1,27 @@
-section#river {
-	position: relative;
-	margin-left: 26%;
-	border-left: 1px solid #e3e3e3;
-	min-height: 900px;
-	z-index: 10;
-	background-color: #fff;
+#river {
+  margin-left: 26%;
+  border-left: 1px solid #e3e3e3;
+  @media (max-width: $responsive_start) {
+    margin-left: 0;
+    border-left: none;
+  }
 }
 
-@media( max-width: $responsive_start ) {
-	section#river {
-		margin-left: 0;
-		border-left: none;
-	}
+@media (max-width: $responsive_start) {
+  ul#user_nav li {
+    display: block;
+    margin: 0;
+  }
 
-	ul#user_nav li {
-		display: block;
-		margin: 0;
-	}
-
-	ul#user_nav li.feed {
+  ul#user_nav li.feed {
     display: none;
   }
 
-	header.begin {
-    display:none;
+  header.begin {
+    display: none;
   }
 
-	/* Article */
-
-  article {
-  	h1, h2, h3, p {
-    	max-width: 100%;
-    	padding-right: 0;
-    }
-    &.post {
-      padding: 15px;
-    }
-    hr {
-    	width: 80%;
-      margin: 35px auto 30px;
-    }
-    blockquote {
-      margin: 0 0px 0 0px;
-      max-width: none;
-      min-width: 0;
-      padding: 0;
-    }
-  }
-
-	nav.pagination {
+  nav.pagination {
     padding: 0 10px 0 10px;
   }
 
@@ -64,7 +37,7 @@ section#river {
   transition: max-height 0.4s ease-in-out;
   overflow: hidden;
   margin: 30px 0 0 0;
-  @media( max-width: $responsive_start ) {
+  @media (max-width: $responsive_start) {
     margin-top: 0px;
     float: right;
     width: 100%;
@@ -75,75 +48,72 @@ section#river {
 }
 
 #menu {
-    padding: 0px 30px 0px 30px;
-    a {
-        display: inline-block;
-        font-size: 17px;
-        color: $lt_grey;
-        font-weight: 600;
-        letter-spacing: 1px;
-        margin-bottom: 17px;
-        &:hover {
-            color: #000;
-            border-color: #000;
-        }
+  padding: 0px 30px 0px 30px;
+  a {
+    display: inline-block;
+    font-size: 17px;
+    color: $lt_grey;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-bottom: 17px;
+    &:hover {
+      color: #000;
+      border-color: #000;
     }
-    @media( max-width: $responsive_start ) {
-        padding: 0;
-        li {
-            display: block;
-            a {
-                display: block;
-                border: none;
-                position: relative;
-                margin: 0;
-                padding: 15px;
-                font-size: 20px;
-                border-radius: 0px;
-                margin: 0 -10px 0 -10px;
-                &, &:hover, &.active {
-                    border-top: 1px solid #e2e2e2 !important;
-                }
-            }
-            &.active {
-                border-top: none;
-            }
+  }
+  @media (max-width: $responsive_start) {
+    padding: 0;
+    li {
+      display: block;
+      a {
+        display: block;
+        border: none;
+        position: relative;
+        margin: 0;
+        padding: 15px;
+        font-size: 20px;
+        border-radius: 0px;
+        margin: 0 -10px 0 -10px;
+        &,
+        &:hover,
+        &.active {
+          border-top: 1px solid #e2e2e2 !important;
         }
+      }
+      &.active {
+        border-top: none;
+      }
     }
+  }
 }
 
 #social_icons {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    margin-bottom: 30px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 30px;
+  padding: 0px 30px 0px 30px;
+  a {
     text-align: center;
-    padding: 0px 30px 0px 30px;
-    a {
-        text-align: center;
-        margin-right: 10px;
-        width: 35px;
-        height: 35px;
-        display: inline-block;
-    }
-    &:hover {
-        color: black;
-        cursor: pointer;
-    }
-    @media( max-width: $responsive_start ) {
-        position: relative;
-        display: inline-block;
-        padding: 15px 0px 15px 0px;
-        border-top: 1px solid #e2e2e2 !important;
-        width: 100%;
-    }
+    margin-right: 10px;
+    width: 35px;
+    height: 35px;
+    display: inline-block;
+  }
+  @media (max-width: $responsive_start) {
+    position: relative;
+    display: inline-block;
+    padding: 15px 0px 15px 0px;
+    border-top: 1px solid #e2e2e2 !important;
+    width: 100%;
+  }
 }
 
 // Path is only used in the social media icons
 path {
-    fill: #585858;
+  fill: #585858;
 }
 
 #open_menu:checked ~ #user_nav {
-    max-height: 50vh;
+  max-height: 50vh;
 }
