--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -20,7 +20,7 @@
     right: auto;
     top: 0;
     img {
-      margin-top: 0px;
+      margin-top: 0;
     }
   }
 }
@@ -38,8 +38,8 @@
     margin-top: 30px;
   }
   @media (max-width: $responsive_start) {
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     z-index: 99;
     min-height: 0;
     width: 100%;
