--- a/assets/css/sidebar.scss
+++ b/assets/css/sidebar.scss
@@ -38,17 +38,17 @@
   overflow: hidden;
   margin: 30px 0 0 0;
   @media (max-width: $responsive_start) {
-    margin-top: 0px;
+    margin-top: 0;
     float: right;
     width: 100%;
     padding: 0;
-    max-height: 0px;
+    max-height: 0;
     top: 6px;
   }
 }
 
 #menu {
-  padding: 0px 30px 0px 30px;
+  padding: 0 30px 0 30px;
   a {
     display: inline-block;
     font-size: 17px;
@@ -72,7 +72,7 @@
         margin: 0;
         padding: 15px;
         font-size: 20px;
-        border-radius: 0px;
+        border-radius: 0;
         margin: 0 -10px 0 -10px;
         &,
         &:hover,
@@ -92,7 +92,7 @@
   bottom: 0;
   left: 0;
   margin-bottom: 30px;
-  padding: 0px 30px 0px 30px;
+  padding: 0 30px 0 30px;
   a {
     text-align: center;
     margin-right: 10px;
@@ -103,7 +103,7 @@
   @media (max-width: $responsive_start) {
     position: relative;
     display: inline-block;
-    padding: 15px 0px 15px 0px;
+    padding: 15px 0 15px 0;
     border-top: 1px solid #e2e2e2 !important;
     width: 100%;
   }
