--- a/assets/css/constants.scss
+++ b/assets/css/constants.scss
@@ -4,3 +4,4 @@ $mobile_start: 500px;
 $lt_grey: #585858;
 $blue: #008aff;
 $body_font: "Helvetica Neue", "Helvetica", sans-serif;
+$font_size_regular: 17px;
